<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/list_padding"
        android:paddingBottom="@dimen/list_padding"
        android:textSize="@dimen/text_size_labels"
        android:hint="@string/ingredients"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>