<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:textSize="@dimen/error_message_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/file_loading_error_message"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />


</FrameLayout>