<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.StepDetailActivity">

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/step_description"
            android:padding="16dp"
            android:textSize="@dimen/step_text_size"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

    </ScrollView>

</LinearLayout>